# Rust-Full-Stack-Workshop-DevBCN

./: .env  .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md
api/lib/: Cargo.toml
api/lib/src/: film_repository.rs  health.rs  lib.rs
api/lib/src/api/: films.rs  films_dynamic.rs  films_static.rs  health.rs  mod.rs
api/lib/src/film_repository/: film_repository.rs  memory_film_repository.rs  mod.rs  postgres_film_repository.rs
api/lib/tests/: health.rs
app/: Cargo.toml
app/src/: errors.rs  main.rs
front/: Cargo.toml  Dioxus.toml  tailwind.config.js
front/public/: tailwind.css
front/src/: main.rs
front/src/components/: app.rs  button.rs  film_card.rs  film_modal.rs  footer.rs  header.rs  mod.rs
front/src/models/: button.rs
shared/: Cargo.toml
shared/src/: models.rs
