[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
api-lib = {path = "../api/lib"}
actix-web = "4"
derive_more = "0.99.7"
dotenvy = "0.15.7"
sqlx = { version = "0.7", default-features = false, features = [
    "runtime-tokio",
    "tls-native-tls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
