[package]
name = "api-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
sqlx = { version = "0.7", default-features = false, features = [
    "runtime-tokio",
    "tls-native-tls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }
shared = { path = "../../shared" }
tracing = "0.1"
serde = "1.0"
serde_json = "1.0"
uuid = { version = "1.3.4", features = ["serde", "v4", "js"] }
async-trait = "0.1.68"

[dev-dependencies]
dotenvy = "0.15.7"
